--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A memory game written in JavaScript",
   "main": "src/index.js",
   "scripts": {
-    "test": "test"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,15 @@
   },
   "homepage": "https://github.com/gkatai/find-the-pairs#readme",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
