--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,10 @@
   },
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
   "rules": {
     "prettier/prettier": "error"
   }
