--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "jest --watch --verbose"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
     "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
