--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "immer": "^5.1.0"
   }
 }
