--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,10 @@
   "extends": ["eslint:recommended"],
   "parserOptions": {
     "ecmaVersion": 2017,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "es6": true,
