--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.7.7",
     "@babel/plugin-transform-react-jsx": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
@@ -41,7 +42,6 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "immer": "^5.1.0",
     "petit-dom": "^0.3.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
